barebone structure set up and added latest event component

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  display: grid;
+  height: 100vh;
+  grid-template-rows: 100px 1fr 100px;
+}
+
+nav {
+
+}
+
+main {
+
+}
+
+footer {
+
+}
+
+* {
+  border: 1px solid black
+}
+.latest-race{
+  background-color: pink;
+}
+
+
+/* Mercedes	#00D2BE	0,210,90 */
+.mercedes {
+  color: #00D2BE;
+}
+/* Ferrari	#DC0000	220,0,0 */
+.ferrari {
+  color: #DC0000;
+}
+/* Red Bull Racing	#0600EF	6,0,239 */
+.red_bull{
+  color: #0600EF;	
+}
+/* Alpine	#0090FF	0,144,255
+Haas	#FFFFFF	255,255,255
+Aston Martin	#006F62	0,111,98
+AlphaTauri	#2B4562	43,69,98
+McLaren	#FF8700	255,135,0
+Alfa Romeo Racing	#900000	144,0,0
+Williams	#005AFF	0,90,255 */
