--- a/src/index.css
+++ b/src/index.css
@@ -7,53 +7,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-container {
+  margin: 0 4rem 4rem 4rem;
 }
 
-.App {
-  /* display: grid; */
-  /* grid-template-rows: 50px 1fr 50px; */
+.main-container h1{
+  text-align: center;
 }
 
-/* nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1rem;
-} */
-
-nav a{
-  text-decoration: none;
-  color:black;
-}
-nav a:hover{
-  color:red;
-}
-
-main {
-  padding: 0 2rem;
-}
-
-footer {
-
-}
-
-* {
-  /* border: 1px solid black */
-}
 .current-standing{
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.current-standing div.row{
-  /* --bs-gutter-x: 0; */
+  padding: 2rem 0;
 }
 
 .query-result{
-  padding: 4rem;
+  padding-top: 4rem;
 }
 
 .driver-img{
@@ -68,10 +38,16 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 2rem 0
 }
 
 .countdown{
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 2rem 0
+}
+
+.countdown-text{
+  color: red;
 }
