--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 .main-container {
-  margin: 0 4rem 4rem 4rem;
+  margin: 4rem 4rem 4rem 4rem;
 }
 
 .main-container h1{
@@ -38,9 +38,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem 0
+  padding: 2rem 0;
 }
 
+.table-nav{
+  display: flex;
+  justify-content: space-evenly;
+}
 .countdown{
   display: flex;
   flex-direction: column;
@@ -49,5 +53,17 @@ body {
 }
 
 .countdown-text{
-  color: red;
+  color: rgb(255, 0, 0);
+}
+
+@media screen and (min-width: 768px) {
+  .card{
+    min-height: 285px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .card{
+    min-height: 310px;
+  }
 }
