--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
+@font-face {
+  font-family: "F1-Regular";
+  src: local("F1-Regular"), url("./fonts//Formula1-Regular.ttf") format("truetype");
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.App{
+  font-family: 'F1-Regular';
 }
 
 .main-container {
@@ -17,13 +22,13 @@ body {
   min-height: 95vh;
 }
 
-.main-container h1{
+.main-container h1, .main-container h2{
   text-align: center;
 }
 
 .footer-disclaimer{
   font-size: 12px;
-  text-align: right;
+  text-align: center;
   margin: 0;
 }
 
@@ -38,12 +43,8 @@ body {
   color: rgb(255, 0, 0);
 }
 
-.welcome-msg, .countdown h2, .current-standing h2, .latest-race h2{
+.welcome-msg, .countdown h2, .current-standing h2{
   color:white
-}
-.latest-race a{
-  color: white;
-  text-decoration: none;
 }
 
 .current-standing{
@@ -53,12 +54,11 @@ body {
   padding: 2rem 0;
 }
 
-.query-result{
-  padding-top: 4rem;
+.header{
+  padding-top: 2rem;
 }
-
-.driver-img{
-  width: 200px;
+.query-result{
+  padding: 4rem;
 }
 
 .dropdown-menu.show{
@@ -66,22 +66,27 @@ body {
   overflow: scroll;
 }
 .latest-race{
+  background-color: rgba(255, 255, 255, 0.50);
+  border-radius: 15px;
+}
+.latest-race-container{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2rem 0;
+  padding: 4rem;
 }
-.previous-season{
-  background-color: white;
+.table-responsive{
+  min-width: 100%;
 }
-.current-season{
-  background-color: white;
+.latest-race a{
+  color: black;
+  text-decoration: none;
 }
-.table-nav{
-  display: flex;
-  justify-content: space-evenly;
+.query-container{
+  background-color: rgba(255, 255, 255, 0.50);
+  border-radius: 15px;
+  min-height: 80vh;
 }
-
 
 @media screen and (min-width: 768px) {
   .card{
